board divs populated

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/style" href="index.css">
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <form>
-      <div id='board'>
-        <div id="main">
+
     <!-- <img src="images/tic-tac-toe.png"> -->
 
     <script src="index.js"></script>
